[project]
name = "ds3010-final"
version = "0.1.0"
description = "WPI DS3010 final project"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dash>=3.3.0",
    "kagglehub>=0.3.13",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
    "uv>=0.9.17",
]
