[metadata]
name = ds3010-final
version = 0.1.0
description = WPI DS3010 final project
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
# Explicitly declare the top-level modules to avoid setuptools' flat-layout error:
# "Multiple top-level modules discovered in a flat-layout: ['map', 'main']"
# With this, editable installs (pip install -e .) won't fail due to ambiguous
# automatic discovery.
py_modules = main, map
python_requires = >=3.14